# OOP_Labs

lab3/: CMakeLists.txt  main.cpp  wav_core.cpp  wav_core.hpp  wav_exceptions.hpp  wav_header.hpp
lab4/: CMakeLists.txt  main.cpp
lab4/Algorithm/: Naive_Algorithm.hpp  Pollard_Rho_Brent.hpp
lab4/Core/: Algorithm.hpp  ConcurrentFactorizator.hpp  ConcurrentQueue.hpp  Factorizator.hpp  Input.hpp  Output.hpp  Threadpool.hpp
